syntax = "proto3";

package iAutoApi;

message Requestor {
    string type  = 1;
}

message EmployeeInfo {
    int32    number     = 1;  // employee work number
    string   name       = 2;  // employee name
    string   department = 3;  // employee department
}

message SRequestor {
    int32 id    = 1;
    string mesg = 2;
}

message SResponsor {
    int32 id    = 1;
    string mesg = 2;
}

service IAutoOA {
    rpc GetEmployeeInfo(Requestor) returns (EmployeeInfo) {}
    rpc EchoMessage(stream SRequestor) returns(stream SResponsor) {}
}

